# AutomationTrading-Strategy-Backtesting-Suite

./: .gitignore  LICENSE  README.md  README_español.md  Readme.md
suitetrading/: .env.example  .gitignore  DIRECTION.md  HANDOFF.md  README.md  RUNBOOK.md  pyproject.toml
suitetrading/config/: production_portfolio.json
suitetrading/docs/: README.md  architecture.md  backtest_execution_semantics.md  backtesting_benchmarks.md  cookbook.md  data_quality_report.md  history.md  indicator_availability_matrix.md  indicator_catalog.md  methodology.md  phase2_discovery_plan.md  raw_data_integrity_report.md  risk_lab_report.md  risk_management_framework.md  risk_management_spec.md  search_space_maturity_matrix.md  setup.md  signal_flow.md  sprint1_implementation_guide.md  sprint1_master_plan.md  sprint2_go_no_go_checklist.md  sprint4_technical_spec.md  sprint55_completion_report.md  sprint55_technical_spec.md  sprint5_completion_report.md  sprint5_implementation_guide.md  sprint5_technical_spec.md  sprint6_implementation_guide.md  sprint6_master_plan.md  sprint6_technical_spec.md  validation_framework.md
suitetrading/scripts/: _check_metrics_keys.py  _commission_impact.py  _db_analysis.py  _diag_signals.py  _indicator_audit.py  _indicator_audit_fast.py  _mode_comparison.py  _quick_diag.py  _smoke_analysis.py  _verify_commission.py  analyze_correlation.py  analyze_discovery.py  analyze_risk_lab.py  audit_raw_data.py  benchmark_backtesting.py  build_candidate_pool.py  cross_validate_native.py  diag_archetypes.py  diag_deep.py  diag_detailed.py  diag_mini.py  diag_v2.py  download_data.py  download_futures_data.py  download_macro_data.py  gen_regression_fixtures.py  plot_indicator_validation.py  portfolio_walkforward.py  replay_finalists.py  replay_with_slippage.py  run_discovery.py  run_exhaustive_v9.sh  run_exhaustive_v9_resume.sh  run_null_hypothesis.py  (+11 more)
(+374 files in other folders)
